<resources>

    <string name="app_name">tUtor</string>
    <string name="spinner_hint">In which city are you based?</string>

    <string-array name="emailAddresses">
        <item>example@email.com</item>
        <item>another@email.com</item>
        <item>sophie_p95@hotmail.com</item>
        <item>k.liaskos@strath.ac.uk</item>
    </string-array>

    <string-array name="passwords">
        <item>drowssap</item>
        <item>Hunter2</item>
        <item>SophiePass</item>
        <item>kostas123</item>
    </string-array>

    <string-array name="ukCities">
        <item>- Where are you? -</item>
        <item>Aberdeen</item>
        <item>Albans</item>
        <item>Armagh</item>
        <item>Bangor</item>
        <item>Bath</item>
        <item>Belfast</item>
        <item>Birmingham</item>
        <item>Bradford</item>
        <item>Brighton and Hove</item>
        <item>Bristol</item>
        <item>Cambridge</item>
        <item>Canterbury</item>
        <item>Cardiff</item>
        <item>Carlisle</item>
        <item>Chester</item>
        <item>Chichester</item>
        <item>City of London</item>
        <item>Coventry</item>
        <item>Derby</item>
        <item>Dundee</item>
        <item>Durham</item>
        <item>Edinburgh</item>
        <item>Ely</item>
        <item>Exeter</item>
        <item>Glasgow</item>
        <item>Gloucester</item>
        <item>Hereford</item>
        <item>Inverness</item>
        <item>Kingston upon Hull</item>
        <item>Lancaster</item>
        <item>Leeds</item>
        <item>Leicester</item>
        <item>Lichfield</item>
        <item>Lincoln</item>
        <item>Lisburn</item>
        <item>Liverpool</item>
        <item>Londonderry</item>
        <item>Manchester</item>
        <item>Newcastle upon Tyne</item>
        <item>Newport</item>
        <item>Newry</item>
        <item>Norwich</item>
        <item>Nottingham</item>
        <item>Oxford</item>
        <item>Peterborough</item>
        <item>Plymouth</item>
        <item>Portsmouth</item>
        <item>Preston</item>
        <item>Ripon</item>
        <item>Salford</item>
        <item>Salisbury</item>
        <item>Sheffield</item>
        <item>Southampton</item>
        <item>St Davids</item>
        <item>Stirling</item>
        <item>Stoke-on-Trent</item>
        <item>Sunderland</item>
        <item>Swansea</item>
        <item>Truro</item>
        <item>Wakefield</item>
        <item>Wells</item>
        <item>Westminster</item>
        <item>Winchester</item>
        <item>Wolverhampton</item>
        <item>Worcester</item>
        <item>York</item>
    </string-array>

    <string-array name="ukCitiesSearch">
        <item>- Where? -</item>
        <item>Aberdeen</item>
        <item>Albans</item>
        <item>Armagh</item>
        <item>Bangor</item>
        <item>Bath</item>
        <item>Belfast</item>
        <item>Birmingham</item>
        <item>Bradford</item>
        <item>Brighton and Hove</item>
        <item>Bristol</item>
        <item>Cambridge</item>
        <item>Canterbury</item>
        <item>Cardiff</item>
        <item>Carlisle</item>
        <item>Chester</item>
        <item>Chichester</item>
        <item>City of London</item>
        <item>Coventry</item>
        <item>Derby</item>
        <item>Dundee</item>
        <item>Durham</item>
        <item>Edinburgh</item>
        <item>Ely</item>
        <item>Exeter</item>
        <item>Glasgow</item>
        <item>Gloucester</item>
        <item>Hereford</item>
        <item>Inverness</item>
        <item>Kingston upon Hull</item>
        <item>Lancaster</item>
        <item>Leeds</item>
        <item>Leicester</item>
        <item>Lichfield</item>
        <item>Lincoln</item>
        <item>Lisburn</item>
        <item>Liverpool</item>
        <item>Londonderry</item>
        <item>Manchester</item>
        <item>Newcastle upon Tyne</item>
        <item>Newport</item>
        <item>Newry</item>
        <item>Norwich</item>
        <item>Nottingham</item>
        <item>Oxford</item>
        <item>Peterborough</item>
        <item>Plymouth</item>
        <item>Portsmouth</item>
        <item>Preston</item>
        <item>Ripon</item>
        <item>Salford</item>
        <item>Salisbury</item>
        <item>Sheffield</item>
        <item>Southampton</item>
        <item>St Davids</item>
        <item>Stirling</item>
        <item>Stoke-on-Trent</item>
        <item>Sunderland</item>
        <item>Swansea</item>
        <item>Truro</item>
        <item>Wakefield</item>
        <item>Wells</item>
        <item>Westminster</item>
        <item>Winchester</item>
        <item>Wolverhampton</item>
        <item>Worcester</item>
        <item>York</item>
    </string-array>

    <string-array name="subjects">
        <item>- Which subject? -</item>
        <item>Accounting</item>
        <item>Chemistry</item>
        <item>Computer Science</item>
        <item>Biology</item>
        <item>Electrical Engineering</item>
        <item>English Language</item>
        <item>English Literature</item>
        <item>Geography</item>
        <item>History</item>
        <item>Japanese</item>
        <item>Linguistics</item>
        <item>Mathematics</item>
        <item>Mechanical Engineering</item>
        <item>Medicine</item>
        <item>Philosophy</item>
        <item>Physics</item>
        <item>Software Development</item>
        <item>Sport Science</item>
    </string-array>

    <string-array name="degreeLevels">
        <item>Any degree level</item>
        <item>Attained Bachelors</item>
        <item>Attained Masters</item>
        <item>Attained PhD</item>
    </string-array>

    <string name="title_tutoraccount_list">tutorAccounts</string>
    <string name="title_tutoraccount_detail">tutorAccount Detail</string>
    <string name="about_tutor_app">About tUtor App</string>
    <string name="tuto_app_info">Tutor App.....a platform for registered UK University Students to meet in a chatroom.....to discuss academic challenges, exchange ideas and solve assignments. Students can rate tutors based on performance. The app must be user-friendly and easy to navigate.</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_address_">group2sd@uni.strath.ac.uk</string>
    <string name="version_number">Version Number</string>
    <string name="app_version">V1.0</string>
    <string name="about_tutor">About tUtor App</string>

    <string name="kostasimage">kostasImage</string>
    <string name="gordonfeedbackimage">gordonfeedbackimage</string>
    <string name="sophiefeedbackimage">sophiefeedbackimage</string>
    <string name="marcusfeedbackimage">marcusfeedbackimage</string>
    <string name="fivestarrating">fivestarrating</string>
    <string name="threestarrating">threestarrating</string>
    <string name="kostasratings">kostasratings</string>
    <string name="fourstartrating">fourstartrating</string>
    <string name="gordonratings">gordonratings</string>
    <string name="threestarratings_2">threestarratings_2</string>
    <string name="sophieratings">sophieratings</string>
    <string name="marcusratings">marcusratings</string>
    <string name="Messages">Messages</string>
    <string name="Kostas">Kostas</string>
    <string name="Gordon">Gordon</string>
    <string name="Sophie">Sophie</string>
    <string name="Marcus">Marcus</string>
    <string name="KostasMessage">- Looks Perfect!</string>
    <string name="GordonMessage">- How about trying this</string>
    <string name="SophieMessage">- Would you be able to help with this?</string>
    <string name="MarcusMessage">- Hello</string>
    <string name="Unread">(unread)</string>
    <string name="GroupChats">Group Chats</string>
    <string name="GroupChat1">Mobile Dev Chat</string>
    <string name="GroupChat2">Database Dev Chat</string>
    <string name="GroupChat3">SQL Querys Problem</string>
    <string name="GroupChat4">OOP Java</string>
</resources>
