<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".feedbackActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="430dp"
        android:layout_height="644dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="4">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="135dp"
            android:layout_height="133dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/kostasimage"
            app:layout_column="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_row="0"
            app:srcCompat="@drawable/kostas_l" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="135dp"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/gordonfeedbackimage"
            app:layout_column="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_row="1"
            app:srcCompat="@drawable/gordon_j" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="137dp"
            android:layout_height="157dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/sophiefeedbackimage"
            app:layout_column="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_row="2"
            app:srcCompat="@drawable/sophie_p" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="143dp"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/marcusfeedbackimage"
            app:layout_column="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_row="3"
            app:srcCompat="@drawable/marcus_r" />

        <ImageView
            android:id="@+id/fiveStarRating"
            android:layout_width="127dp"
            android:layout_height="155dp"
            android:contentDescription="@string/fivestarrating"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/fivestarrating" />

        <ImageView
            android:id="@+id/threeStarRating"
            android:layout_width="127dp"
            android:layout_height="142dp"
            android:contentDescription="@string/threestarrating"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/threestarrating" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="125dp"
            android:layout_height="156dp"
            android:contentDescription="@string/kostasratings"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/kostasratingsno" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="124dp"
            android:layout_height="155dp"
            android:contentDescription="@string/fourstartrating"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/fourstarrating" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="125dp"
            android:layout_height="144dp"
            android:contentDescription="@string/gordonratings"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/gordonratings" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="124dp"
            android:layout_height="132dp"
            android:contentDescription="@string/threestarratings_2"
            app:layout_column="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_row="3"
            app:srcCompat="@drawable/threestarrating_2" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="130dp"
            android:layout_height="154dp"
            android:contentDescription="@string/sophieratings"
            app:layout_column="2"
            app:layout_row="2"
            app:srcCompat="@drawable/sophieratings" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="127dp"
            android:layout_height="127dp"
            android:contentDescription="@string/marcusratings"
            app:layout_column="2"
            app:layout_row="3"
            app:srcCompat="@drawable/marcusratings" />

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>